# road-trip-planner

./: .gitignore  Cargo.toml  LICENSE  README.md  plan.dl
data/: amenities.facts  campground.facts  campgrounds.json  distance.facts  location.facts  park.facts  parks.json
output/: souffle-plan.tsv
souffle/: error.dl  plan-choice.dl  plan-enumerate.dl  plan.dl
src/: crepe.rs  main.rs  parser.rs
