[package]
name = "road-trip-planner"
version = "0.1.0"
authors = ["Sam Tay <samctay@pm.me>"]
edition = "2018"

[dependencies]
ureq = { version = "2.1", features = ["json"] }
clap = "3.0.0-beta.2"
serde_json = "1.0"
anyhow = "1.0"
geo = "0.18"
csv = "1.1"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
crepe = "0.1"
